--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "file": "${file}",
+            "file": "C:/Users/lisha/OneDrive/Bureau/Workk/HTSTA/WEBSITE/Html",
             "webRoot": "${workspaceFolder}"
         }
     ]
